Edit css/style.ss and index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                         <a href="#" class="dots"></a>
                     </div>
                 </li>
-                <li><button type="submit" class="sign_in">Sign in</button></li>
+                <li><button class="sign_in">Sign in</button></li>
             </ul>            
         </div>
         <div class="logo">
@@ -23,7 +23,7 @@
         </div>    
         <form action="#" method="POST">
             <input type="text" name="search" id="search">
-            <button type="submit">Google Search</button> <button type="submit">I'm Feeling Lucky</button>
+            <button class="searchform">Google Search</button> <button class="searchform">I'm Feeling Lucky</button>
         </form>
         <div class="footer">
             <ul>
